{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 16,
  "lineage": "b448b951-6039-9ab5-e29b-b58600e23158",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:054862141103:internet-gateway/igw-07b15f9a099d92773",
            "id": "igw-07b15f9a099d92773",
            "owner_id": "054862141103",
            "region": "me-central-1",
            "tags": {
              "Name": "prod-igw"
            },
            "tags_all": {
              "Name": "prod-igw"
            },
            "vpc_id": "vpc-047bdb988b3e68e6b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:054862141103:route-table/rtb-05d6e637527430cea",
            "id": "rtb-05d6e637527430cea",
            "owner_id": "054862141103",
            "propagating_vgws": [],
            "region": "me-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07b15f9a099d92773",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-public-rt"
            },
            "tags_all": {
              "Name": "prod-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-047bdb988b3e68e6b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "054862141103",
            "id": "rtb-05d6e637527430cea",
            "region": "me-central-1"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d760d45b1a39102",
            "region": "me-central-1",
            "route_table_id": "rtb-05d6e637527430cea",
            "subnet_id": "subnet-006ae3164454dfb3a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_route_table.this",
            "module.networking.aws_subnet.this",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:054862141103:subnet/subnet-006ae3164454dfb3a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "me-central-1a",
            "availability_zone_id": "mec1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006ae3164454dfb3a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "054862141103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "me-central-1",
            "tags": {
              "Name": "prod-public-subnet"
            },
            "tags_all": {
              "Name": "prod-public-subnet"
            },
            "vpc_id": "vpc-047bdb988b3e68e6b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "054862141103",
            "id": "subnet-006ae3164454dfb3a",
            "region": "me-central-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:054862141103:vpc/vpc-047bdb988b3e68e6b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03e1d82f8bef2502a",
            "default_route_table_id": "rtb-00bdb16995d34dc0b",
            "default_security_group_id": "sg-08dda997e05fccb1e",
            "dhcp_options_id": "dopt-080bb990f87fb863e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-047bdb988b3e68e6b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00bdb16995d34dc0b",
            "owner_id": "054862141103",
            "region": "me-central-1",
            "tags": {
              "Name": "prod-vpc"
            },
            "tags_all": {
              "Name": "prod-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "054862141103",
            "id": "vpc-047bdb988b3e68e6b",
            "region": "me-central-1"
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:054862141103:security-group/sg-03f45959003eb6423",
            "description": "Backend Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f45959003eb6423",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-064ebfcf638fffdaa"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "backend-sg",
            "name_prefix": "",
            "owner_id": "054862141103",
            "region": "me-central-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-047bdb988b3e68e6b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "054862141103",
            "id": "sg-03f45959003eb6423",
            "region": "me-central-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.security.aws_security_group.nginx"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:054862141103:security-group/sg-064ebfcf638fffdaa",
            "description": "Nginx Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-064ebfcf638fffdaa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx-sg",
            "name_prefix": "",
            "owner_id": "054862141103",
            "region": "me-central-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-047bdb988b3e68e6b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "054862141103",
            "id": "sg-064ebfcf638fffdaa",
            "region": "me-central-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}